--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="tweetBoxContainer">
                     <h3 style="display:none">Write a tweet:</h3>
                     <textarea maxlength="140" id="tweetBox" placeholder="Wassup?"></textarea>
-		    <p> <em id="counter"></em> </p>
-                    <div style="display:none">
+		    <span id="counter"> </span><br />
+                    <div style="display:inline-block;">
                         <button id="postBtn" class="btn btn-primary">Post</button>
                         <button id="clearBtn" class="btn">Clear</button>
                     </div>
