--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-		    <div id="captchadiv" class="formContainer" style="margin-top: 20px;"> </div>	
+		    <div id="captchadiv" ></div><!--class="formContainer" style="margin-top: 20px;"> </div>	-->
 </div>
 <script src="jscss/jquery.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
@@ -111,7 +111,7 @@
         }, function(data) {
             if(data['message']=="Login success")
                 window.location = "/frontend/";
-            else if(data['message']=="Already Looged In"){
+            else if(data['message']=="Already Logged In"){
 			window.location = "/frontend/";
                  }
 	    else
