--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 
     <!-- popup -->
     <div id="popup">
-        <div id="closeButtonPop">
-        <a href="#" id="popupClose">Close</a>
-        </div>
         <div id="popupInner">
             <div id="popupContainer"></div>
+            <button class="btn btn-primary" onclick="closealert(this)">Ok</button>
+        </div>
+        <div id="closeButtonPop">
         </div>
     </div>
 
