Characters left bug fixed

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <div class="tweetBoxContainer">
                     <h3 style="display:none">Write a tweet:</h3>
                     <textarea maxlength="140" id="tweetBox" placeholder="Wassup?"></textarea>
-		    <span id="counter"> </span><br />
                     <div style="display:inline-block;">
                         <button id="postBtn" class="btn btn-primary">Post</button>
                         <button id="clearBtn" class="btn">Clear</button>
+                        <span id="counter"> </span>
                     </div>
                 </div>
                 <hr/>
