Login page firefox bug fixed

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 <link type="text/css" rel="stylesheet" href="jscss/style.css" />
 <style type="text/css">
     #content-wrapper {
-        position: relative;
+        position: fixed;
         width: 900px;
         left: 50%;
         top: 50%;
