Sending current password also

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <h2>Edit profile information:</h2>
                         <input type="text" id="editProfileUsername" placeholder="Username"/><br/>
                         <input type="text" id="editProfileEmail" placeholder="Email"/><br/>
+                        <input type="password" id="editProfileCurrentPassword" placeholder="Current Password"/><br/>
                         <input type="password" id="editProfilePassword" placeholder="Password"/><br/>
                         <input type="password" id="editProfileConfirmPassword" placeholder="Confirm Password"/><br/>
                         <button class="btn btn-primary" id="editProfileSave">Save</button>
