--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h2>Tweets feed:</h2>
                 <div id="feedContainer" class="tweetsContainer">
                 </div>
-                <div style="text-align: center"><a onclick="loadOlderFeed()">Load more tweets</a></div>
+                <div style="text-align: center"><a onclick="loadOlderFeed()" href="javascript:void(0);">Load more tweets</a></div>
                 <div class="clearer"></div>
             </div>
         </div>
@@ -86,19 +86,19 @@
                             <h2>User tweets:</h2>
                             <div id="tweetContainer" class="tweetsContainer">
                             </div>
-                            <div style="text-align: center"><a onclick="loadOlderTweet()">Load more tweets</a></div>
+                            <div style="text-align: center"><a onclick="loadOlderTweet()" href="javascript:void(0);">Load more tweets</a></div>
                             <div class="clearer"></div>
                         </div>
                         <div id="profile-followers" class="profileList">
                             <h2>Followers:</h2>
                             <div id="followersContainer" class="listing"></div>
-                            <div style="text-align: center"><a onclick="showMoreFollowers()">Load more Followers</a></div>
+                            <div style="text-align: center"><a onclick="showMoreFollowers()" href="javascript:void(0);">Load more Followers</a></div>
                             <div class="clearer"></div>
                         </div>
                         <div id="profile-following" class="profileList">
                             <h2>Following:</h2>
                             <div id="followingContainer" class="listing"></div>
-                            <div style="text-align: center"><a onclick="showMoreFollowing()">Load more Following users</a></div>
+                            <div style="text-align: center"><a onclick="showMoreFollowing()" href="javascript:void(0);">Load more Following users</a></div>
                             <div class="clearer"></div>
                         </div>
                     </div>
